frame for the page

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://www.publicdomainpictures.net/pictures/30000/velka/blue-sky-1330598792xLu.jpg');
 }
 
 code {
